  Changelog for the c-ares project

* November 22, 2009 (Yang Tse)
- Jakub Hrozek fixed more function prototypes in man pages to sync them
  with the ones declared in ares.h

* November 20, 2009 (Yang Tse)
- Fixed several function prototypes in man pages that were out of sync
  with the ones declared in ares.h

* November 10, 2009 (Yang Tse)
- Updated MSVC 6.0 project files to match settings from Makefile.msvc.

* November 9, 2009 (Yang Tse)
- Makefile.msvc is now the reference method to build c-ares and sample
  programs with any MSVC compiler or MS Visual Studio version.  If no
  option or target are specified it builds dynamic and static c-ares
  libraries in debug and release flavours and also builds all sample
  programs using each of the different c-ares libraries.

* November 2, 2009 (Yang Tse)
- Renamed c-ares setup.h to ares_setup.h

* October 31, 2009 (Yang Tse)
- Symbol hiding configure options are named now --enable-symbol-hiding
  and --disable-symbol-hiding in an attempt to make them less ambiguous.

* October 30, 2009 (Yang Tse)
- Many fixes for ares_parse_txt_reply()

* October 29, 2009 (Daniel Stenberg)
- Jakub Hrozek added ares_parse_txt_reply() for TXT parsing

* October 29, 2009 (Yang Tse)
- Updated MSVC 6.0 workspace and project files that allows building
  dynamic and static c-ares libraries in debug and release flavours.
  Additionally each of the three sample programs is built against
  each of the four possible c-ares libraries, generating all this
  a total number of 12 executables and 4 libraries.

* October 28, 2009 (Yang Tse)
- Initial step towards the ability to reduce c-ares exported symbols
  when built as a shared library based on the 'visibility' attribute
  for GNUC and Intel compilers and based on __global for Sun compilers,
  taking also in account __declspec function decoration for Win32 and
  Symbian DLL's.

* October 27, 2009 (Yang Tse)
- Fixed Pelles C Win32 target compilation issues.

* October 23, 2009 (Yang Tse)